--- a/UI/harmonique-frontend/src/app/home/edit-profile/edit-profile.component.html
+++ b/UI/harmonique-frontend/src/app/home/edit-profile/edit-profile.component.html
@@ -1,10 +1,10 @@
 <!-- Navigation -->
 
-<nav class="navbar navbar-expand-lg navbar-light shadow-sm sticky-top">
+<!-- <nav class="navbar navbar-expand-lg navbar-light shadow-sm sticky-top">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <i class="fas fa-arrow-left fs-4 mt-4" (click)="goBack()" style="cursor: pointer; color: #6e45e2; border-radius: 1px;"></i>
-      <div style="width: 24px;"></div> <!-- Spacer for alignment -->
+      <div style="width: 24px;"></div>
     </div>
     <a class="navbar-brand" href="#">HARMONIQUE</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -27,7 +27,7 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> -->
 
 <!-- Edit Header -->
 <header class="edit-header text-center">
@@ -111,10 +111,10 @@
               <label for="location" class="form-label">Location</label>
               <input type="text" class="form-control" id="location" value="New York, USA">
             </div>
-            <div class="col-md-6 mb-3">
+            <!-- <div class="col-md-6 mb-3">
               <label for="joinDate" class="form-label">Member Since</label>
               <input type="text" class="form-control" id="joinDate" value="June 2021" disabled>
-            </div>
+            </div> -->
           </div>
 
           <div class="d-flex justify-content-end mt-4">
