--- a/UI/harmonique-frontend/src/app/shared/navbar/navbar.component.html
+++ b/UI/harmonique-frontend/src/app/shared/navbar/navbar.component.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
 
-            <ul class="dropdown-menu dropdown-menu-end mt-2" [class.show]="dropdownOpen">
+            <ul class="dropdown-menu mt-2 custom-dropdown" [class.show]="dropdownOpen">
                 <li>
                     <a class="dropdown-item" routerLink="/profile"><i class="bi bi-person me-2"></i>Profile</a>
                 </li>
