--- a/UI/harmonique-frontend/src/app/home/edit-profile/edit-profile.component.scss
+++ b/UI/harmonique-frontend/src/app/home/edit-profile/edit-profile.component.scss
@@ -4,23 +4,23 @@
   min-height: 100vh;
 }
 
-.navbar {
-  background: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(10px);
-}
+// .navbar {
+//   background: rgba(255, 255, 255, 0.9);
+//   backdrop-filter: blur(10px);
+// }
 
-.navbar-brand {
-  font-weight: 600;
-  color: #6e45e2 !important;
-}
+// .navbar-brand {
+//   font-weight: 600;
+//   color: #6e45e2 !important;
+// }
 
-.edit-header {
-  background: linear-gradient(135deg, #6e45e2 0%, #89d4cf 100%);
-  color: white;
-  padding: 3rem 0;
-  margin-bottom: 2rem;
-  border-radius: 0 0 10px 10px;
-}
+// .edit-header {
+//   //background: linear-gradient(135deg, #6e45e2 0%, #89d4cf 100%);
+//   color: white;
+//   padding: 3rem 0;
+//   margin-bottom: 2rem;
+//   border-radius: 0 0 10px 10px;
+// }
 
 .profile-avatar-edit {
   width: 150px;
@@ -69,8 +69,8 @@
 
 .btn-outline {
   background-color: transparent;
-  border: 1px solid #6e45e2;
-  color: #6e45e2;
+  border: 1px solid #ffffff;
+  color: #ffffff;
 
   &:hover {
     background-color: rgba(139, 132, 160, 0.1);
@@ -112,12 +112,12 @@
   }
 }
 
-footer {
-  background: linear-gradient(135deg, #6e45e2 0%, #89d4cf 100%);
-  color: white;
-  padding: 2rem 0;
-  margin-top: 3rem;
-}
+// footer {
+//   background: linear-gradient(135deg, #6e45e2 0%, #89d4cf 100%);
+//   color: white;
+//   padding: 2rem 0;
+//   margin-top: 3rem;
+// }
 
 .social-links a {
   color: white;
