--- a/UI/harmonique-frontend/src/app/home/search/search.component.scss
+++ b/UI/harmonique-frontend/src/app/home/search/search.component.scss
@@ -1,128 +1,17 @@
-// .container-fluid {
-//   min-height: calc(100vh - 60px - 90px);
-//   margin-top: 60px;
-//   margin-bottom: 90px;
-//   //background: #3066e2;
-// }
-
 .search-container {
   padding: 1rem;
 
-  .head {
+  .head-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     color: white;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 16px;
   }
- }
-//   .song-grid {
-//     display: grid;
-//     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-//     gap: 16px;
-//     padding: 16px;
-//   }
 
-//   .song-card {
-//     background: #18192c99;
-//     color: #ffffff;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: start;
-//     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-//     border-radius: 8px;
-//     position: relative;
-
-//     &:hover .icon-overlay {
-//       opacity: 1;
-//       pointer-events: auto;
-//     }
-//   }
-
-//   .album-img {
-//     width: 100%;
-//     aspect-ratio: 1 / 1;
-//     object-fit: cover;
-//     border-radius: 8px;
-//   }
-
-//   .icon-overlay {
-//     position: absolute;
-//     top: 8px;
-//     right: 8px;
-//     display: flex;
-//     flex-direction: column;
-//     gap: 8px;
-//     opacity: 0;
-//     pointer-events: none;
-//     transition: opacity 0.3s ease;
-//     z-index: 2;
-
-//     button {
-//       background-color: rgba(0, 0, 0, 0.6);
-//       color: white;
-//       border-radius: 50%;
-//       width: 36px;
-//       height: 36px;
-//     }
-//   }
-
-//   mat-card-title {
-//     font-weight: 600;
-//     font-size: 16px;
-//     color: rgb(184, 136, 136);
-//     padding: 0px 0px 0px 10px;
-//   }
-
-//   mat-card-subtitle {
-//     font-size: 12px;
-//     color: #ffffff;
-//     padding: 0px 0px 0px 10px;
-//   }
-
-//   .mat-mdc-card-content {
-//     display: block;
-//     padding: 0px 0px;
-//   }
-
-//   .mat-mdc-card-content:last-child {
-//     padding-bottom: 8px;
-//   }
-
-//   .status-text,
-//   .error-text {
-//     color: white;
-//     font-size: 16px;
-//     padding: 10px;
-//   }
-// }
-
-// .container-fluid {
-//     margin-top: 60px;
-//     margin-bottom: 90px;
-//     background: #3066e2;
-// }
-
-// .search-container {
-//   padding: 1rem;
-
-//   .song-card {
-//     display: flex;
-//     gap: 1rem;
-//     margin: 1rem 0;
-//     padding: 1rem;
-//     border: 1px solid #ddd;
-//     border-radius: 10px;
-//     background-color: #f9f9f9;
-
-//     img {
-//       width: 80px;
-//       height: 80px;
-//       object-fit: cover;
-//       border-radius: 8px;
-//     }
-
-//     h3 {
-//       margin: 0;
-//     }
-//   }
-// }
+  .mat-mdc-card {
+    background-color: #00000041;
+  }
+}
