--- a/UI/harmonique-frontend/src/app/home/profile/profile.component.html
+++ b/UI/harmonique-frontend/src/app/home/profile/profile.component.html
@@ -13,7 +13,7 @@
     <div class="col-auto text-center">
       <div class="avatar-upload">
         <img
-          [src]="user.profilePictureUrl ? environment.uploadsBaseUrl + user.profilePictureUrl : 'https://via.placeholder.com/150'"
+          [src]="user.profilePictureUrl ? environment.uploadsBaseUrl + user.profilePictureUrl : 'assets/icons/default-profile.png'"
           alt="Profile" class="profile-avatar-edit" id="profileAvatar" />
         <div class="avatar-upload-edit">
           <i class="fas fa-camera"></i>
